adicionando lista de bicicletas na home

--- a/bicicletas/home.html
+++ b/bicicletas/home.html
@@ -39,4 +39,20 @@
     </div>
 </main>
 
+<section class="bicicletas-lista">
+    <h2 class="container">escolha a sua.</h2>
+    <ul class="lista-bicicletas">
+        <li><img src="../img/bicicletas/magic-home.jpg" alt="">
+            <h3>Magic Might</h3>
+            <p>R$ 2499</p>
+        </li>
+        <li><img src="../img/bicicletas/nebula-home.jpg" alt="">
+            <h3>Magic Might</h3>
+            <p>R$ 2499</p></li>
+        <li><img src="../img/bicicletas/nimbus-home.jpg" alt="">
+            <h3>Magic Might</h3>
+            <p>R$ 2499</p></li>
+    </ul>
+</section>
+
 </html>
