adicionando parte da tecnologia

--- a/bicicletas/home.html
+++ b/bicicletas/home.html
@@ -35,7 +35,7 @@
             <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
             <a class="botao" href="">Escolha a Sua</a>
         </div>
-        <img src="../img/fotos/introducao.jpg" alt="Bicileta Preta" width="640" height="800">
+        <img src="../img/fotos/introducao.jpg" alt="Bicileta Preta" >
     </div>
 </main>
 
@@ -48,11 +48,39 @@
         </li>
         <li><img src="../img/bicicletas/nebula-home.jpg" alt="">
             <h3>Magic Might</h3>
-            <p>R$ 2499</p></li>
+            <p>R$ 2499</p>
+        </li>
         <li><img src="../img/bicicletas/nimbus-home.jpg" alt="">
             <h3>Magic Might</h3>
-            <p>R$ 2499</p></li>
+            <p>R$ 2499</p>
+        </li>
     </ul>
+</section>
+<section class="tecnologia-bg">
+    <div class="tecnologia container">
+        <div class="tecnologia-conteudo">
+            <h3>Tecnologia Avançada</h3>
+            <h2>você escolhe as suas cores e componentes.</h2>
+            <p>Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+            <a href="./">ESCOLHA UM MODELO</a>
+            <ul class="conteudo-sobre">
+                
+                <li>
+                    <img class="img-sobre" src="../img/icones/rastreador.svg" alt="">
+                    <h3>Motor Elétrico</h3>
+                    <p>Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                </li>
+                
+                <li>
+                    <img class="img-sobre" src="../img/icones/eletrica.svg" alt="">
+                    <h3>Rastreador</h3>
+                    <p>Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                </li>
+            </ul>
+        </div>
+        <img class="img-bg" src="../img/fotos/tecnologia.jpg" alt="" >
+    </div>
+
 </section>
 
 </html>
