adicionando parceiros na home

--- a/bicicletas/home.html
+++ b/bicicletas/home.html
@@ -82,5 +82,21 @@
     </div>
 
 </section>
+<section class="parceiros-bg">
+    <h2 class="parceiros container">nossos parceiros.</h2>
+    <div class="imgs-parceiros">
+        <ul class="flex-imgs">
+            <li> <img src="../img/parceiros/caravan.svg" alt=""></li>
+            <li><img src="../img/parceiros/ranek.svg" alt=""></li>
+            <li><img src="../img/parceiros/handel.svg" alt=""></li>
+            <li><img src="../img/parceiros/dogs.svg" alt=""></li>
+            <li><img src="../img/parceiros/lescone.svg" alt=""></li>
+            <li><img src="../img/parceiros/flexblog.svg" alt=""></li>
+            <li><img src="../img/parceiros/wildbeast.svg" alt=""></li>
+            <li><img src="../img/parceiros/surfbot.svg" alt=""></li>
+
+        </ul>
+    </div>
+</section>
 
 </html>
