--- a/bicicletas/home.html
+++ b/bicicletas/home.html
@@ -35,7 +35,7 @@
             <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
             <a class="botao" href="">Escolha a Sua</a>
         </div>
-        <img src="../img/fotos/introducao.jpg" alt="Bicileta Preta" >
+        <img src="../img/fotos/introducao.jpg" alt="Bicileta Preta">
     </div>
 </main>
 
@@ -64,13 +64,13 @@
             <p>Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
             <a href="./">ESCOLHA UM MODELO</a>
             <ul class="conteudo-sobre">
-                
+
                 <li>
                     <img class="img-sobre" src="../img/icones/rastreador.svg" alt="">
                     <h3>Motor Elétrico</h3>
                     <p>Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
                 </li>
-                
+
                 <li>
                     <img class="img-sobre" src="../img/icones/eletrica.svg" alt="">
                     <h3>Rastreador</h3>
@@ -78,7 +78,7 @@
                 </li>
             </ul>
         </div>
-        <img class="img-bg" src="../img/fotos/tecnologia.jpg" alt="" >
+        <img class="img-bg" src="../img/fotos/tecnologia.jpg" alt="">
     </div>
 
 </section>
@@ -94,9 +94,18 @@
             <li><img src="../img/parceiros/flexblog.svg" alt=""></li>
             <li><img src="../img/parceiros/wildbeast.svg" alt=""></li>
             <li><img src="../img/parceiros/surfbot.svg" alt=""></li>
-
         </ul>
     </div>
+</section>
+<section class="depoimento-bg">
+    <div class="depoimento-conteudo">
+            <img src="../img/fotos/depoimento.jpg" alt="">
+            <div class="frase container">
+                <h1>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</h1>
+                <p>Ana Júlia</p>
+            </div>
+        </div>
+    <!-- <img src="../img/fotos/depoimento.jpg" alt=""> -->
 </section>
 
 </html>
