começando a fazer a section seguros.

--- a/bicicletas/home.html
+++ b/bicicletas/home.html
@@ -99,13 +99,75 @@
 </section>
 <section class="depoimento-bg">
     <div class="depoimento-conteudo">
-            <img src="../img/fotos/depoimento.jpg" alt="">
-            <div class="frase container">
-                <h1>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</h1>
-                <p>Ana Júlia</p>
-            </div>
+        <img src="../img/fotos/depoimento.jpg" alt="">
+        <div class="frase container">
+            <h1>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</h1>
+            <p>Ana Júlia</p>
         </div>
+    </div>
     <!-- <img src="../img/fotos/depoimento.jpg" alt=""> -->
 </section>
+<section class="seguro-bg">
+    <div class="seguro container">
+        <h2>seguros.</h2>
+        <div class="planos-grid">
+            <div class="plano-prata">
+                <div class="flex-titulo">
+                    <h3>prata</h3>
+                    <span>
+                        <p class="valores1">R$ 199</p>
+                        <p class="mensal1">mensal</p>  
+                    </span>
+                </div>
+                <ul>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Duas trocas por ano
+                    </li>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Assistência técnica
+                    </li>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Suporte 08h às 18h
+                    </li>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Cobertura estadual
+                    </li>
+                </ul>
+                <div class="botao-prata">
+                    <a href="./">INSCREVA-SE</a>
+                </div>
+            </div>
+            <div class="plano-ouro">
+                <h3>Ouro</h3>
+                <span>
+                    <!-- <p>R$ 199</p> -->
+                </span>
+                <ul>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Duas trocas por ano
+                    </li>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Assistência técnica
+                    </li>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Suporte 08h às 18h
+                    </li>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Cobertura estadual
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 </html>
