adicionando Seguros na Home

--- a/bicicletas/home.html
+++ b/bicicletas/home.html
@@ -116,7 +116,7 @@
                     <h3>prata</h3>
                     <span>
                         <p class="valores1">R$ 199</p>
-                        <p class="mensal1">mensal</p>  
+                        <p class="mensal1">mensal</p>
                     </span>
                 </div>
                 <ul>
@@ -141,11 +141,15 @@
                     <a href="./">INSCREVA-SE</a>
                 </div>
             </div>
+
             <div class="plano-ouro">
-                <h3>Ouro</h3>
-                <span>
-                    <!-- <p>R$ 199</p> -->
-                </span>
+                <div class="flex-titulo">
+                    <h3>Ouro</h3>
+                    <span>
+                        <p class="valores1">R$ 299</p>
+                        <p class="mensal1">mensal</p>
+                    </span>
+                </div>
                 <ul>
                     <li>
                         <span><img src="../img/icones/lista.svg" alt=""></span>
@@ -153,17 +157,28 @@
                     </li>
                     <li>
                         <span><img src="../img/icones/lista.svg" alt=""></span>
-                        Assistência técnica
+                        Assistência especial
                     </li>
                     <li>
                         <span><img src="../img/icones/lista.svg" alt=""></span>
-                        Suporte 08h às 18h
+                        Suporte 24h
                     </li>
                     <li>
                         <span><img src="../img/icones/lista.svg" alt=""></span>
-                        Cobertura estadual
+                        Cobertura nacional
+                    </li>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Desconto em parceiros
+                    </li>
+                    <li>
+                        <span><img src="../img/icones/lista.svg" alt=""></span>
+                        Acesso ao Clube Bikcraft
                     </li>
                 </ul>
+                <div class="botao-ouro1">
+                    <a href="./">INSCREVA-SE</a>
+                </div>
             </div>
         </div>
     </div>
