--- a/bicicletas/home.html
+++ b/bicicletas/home.html
@@ -183,6 +183,30 @@
         </div>
     </div>
 </section>
-
+<footer class="footer-bg">
+    <div class="informacoes container">
+        <div class="logo-footer">
+            <img src="../img/bikcraft.svg" alt="">
+        </div>
+        <div class="contatos-footer">
+            <p class="titulo-footer">Contato</p>
+            <div class="textos-footer">
+                <p>+55 21 9999-9999</p>
+                <p> contato@bikcraft.com</p>
+                <p>Rua Ali Perto, 42 - Botafogo</p>
+                <p>Rio de Janeiro - RJ</p>
+            </div>
+        </div>
+        <div class="informacoes-footer">
+            <p class="titulo-footer">informações</p>
+        <div class="textos-footer">
+            <p>Bicicletas</p>
+            <p>Seguros</p>
+            <p>Contato</p>
+            <p>Termos e Condições</p>
+        </div>
+    </div>
+    <p class="textos-footer container">Bikcraft © Alguns direitos reservados.</p>
+</footer>
 
 </html>
