adicionando pergunta e terminando a pagina seguros

--- a/bicicletas/seguros.html
+++ b/bicicletas/seguros.html
@@ -24,6 +24,7 @@
             </nav>
         </div>
     </header>
+</body>
     <section class="seguro-bg">
         <div class="seguro container">
             <h2>seguros.</h2>
@@ -137,5 +138,58 @@
             </ul>
         </div>
     </section>
-</body>
+    <section class="perguntas-bg">
+        <div class="perguntas container">
+            <h1>perguntas frequentes.</h1>
+            <ul class="lista-perguntas">
+                <li>
+                    <h3>Qual forma de pagamento vocês aceitam?</h3>
+                </li>
+                <li>
+                    <h3>Como posso entrar em contato?</h3>
+                </li>
+                <li>
+                    <h3>Vocês possuem algum desconto?</h3>
+                </li>
+                <li>
+                    <h3>Qual a garantia que possuo?</h3>
+                </li>
+                <li>
+                    <h3>Posso parcelar no boleto?</h3>
+                </li>
+                <li>
+                    <h3>QUantas trocas posso fazer ao ano?</h3>
+                </li>
+                <li>
+                    <h3>Qual Bikcraft devo escolher para o meu tamanho?</h3>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <footer class="footer-bg">
+        <div class="informacoes container">
+            <div class="logo-footer">
+                <img src="../img/bikcraft.svg" alt="">
+            </div>
+            <div class="contatos-footer">
+                <p class="titulo-footer">Contato</p>
+                <div class="textos-footer">
+                    <p>+55 21 9999-9999</p>
+                    <p> contato@bikcraft.com</p>
+                    <p>Rua Ali Perto, 42 - Botafogo</p>
+                    <p>Rio de Janeiro - RJ</p>
+                </div>
+            </div>
+            <div class="informacoes-footer">
+                <p class="titulo-footer">informações</p>
+            <div class="textos-footer">
+                <p>Bicicletas</p>
+                <p>Seguros</p>
+                <p>Contato</p>
+                <p>Termos e Condições</p>
+            </div>
+        </div>
+        <p class="textos-footer container">Bikcraft © Alguns direitos reservados.</p>
+    </footer>
+
 </html>
