adicionando locais e terminando page contato

--- a/bicicletas/contato.html
+++ b/bicicletas/contato.html
@@ -74,5 +74,63 @@
         </div>
     </div>
 </section>
+<section class="lojas-local-bg">
+    <div class="container">
+        <h1>lojas locais.</h1>
+        <div class="lojas-local">
+            <div class="local-item">
+                <img src="../img/lojas/sp.jpg" alt="">
+                <div class="conteudo-local">
+                    <h2>Rio de Janeiro</h2>
+                    <ul class="endereços-conteudo">
+                        <li>Rua Ali Perto, 25</li>
+                        <li>Rio de Janeiro - RJ</li>
+                        <li>rio@bikcraft.com</li>
+                        <li>21 9999-9999</li>
+                    </ul>
+                    <h3>08-18h de seg à dom</h3>
+                </div>
+            </div>
+            <div class="local-item">
+                <img src="../img/lojas/sp.jpg" alt="">
+                <div class="conteudo-local">
+                    <h2>Rio de Janeiro</h2>
+                    <ul class="endereços-conteudo">
+                        <li>Rua Ali Perto, 25</li>
+                        <li>Rio de Janeiro - RJ</li>
+                        <li>rio@bikcraft.com</li>
+                        <li>21 9999-9999</li>
+                    </ul>
+                    <h3>08-18h de seg à dom</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="footer-bg">
+    <div class="informacoes container">
+        <div class="logo-footer">
+            <img src="../img/bikcraft.svg" alt="">
+        </div>
+        <div class="contatos-footer">
+            <p class="titulo-footer">Contato</p>
+            <div class="textos-footer">
+                <p>+55 21 9999-9999</p>
+                <p> contato@bikcraft.com</p>
+                <p>Rua Ali Perto, 42 - Botafogo</p>
+                <p>Rio de Janeiro - RJ</p>
+            </div>
+        </div>
+        <div class="informacoes-footer">
+            <p class="titulo-footer">informações</p>
+        <div class="textos-footer">
+            <p>Bicicletas</p>
+            <p>Seguros</p>
+            <p>Contato</p>
+            <p>Termos e Condições</p>
+        </div>
+    </div>
+    <p class="textos-footer container">Bikcraft © Alguns direitos reservados.</p>
+</footer>
 
 </html>
