--- a/bicicletas/bicicletas.html
+++ b/bicicletas/bicicletas.html
@@ -14,12 +14,12 @@
 <body>
     <header class="header-bg">
         <div class="header container">
-            <img src="../img/bikcraft.svg" alt="">
+            <a href="./home.html"><img src="../img/bikcraft.svg" alt=""></a>
             <nav>
                 <ul class="header-menu">
-                    <li>Bicicletas</li>
-                    <li>Seguros</li>
-                    <li>Contato</li>
+                    <a href="./bicicletas.html"><li>Bicicletas</li></a>
+                    <a href="./seguros.html"><li>Seguros</li></a>
+                    <a href="./contato.html"><li>Contato</li></a>
                 </ul>
             </nav>
         </div>
@@ -128,9 +128,9 @@
             <div class="informacoes-footer">
                 <p class="titulo-footer">informações</p>
             <div class="textos-footer">
-                <p>Bicicletas</p>
-                <p>Seguros</p>
-                <p>Contato</p>
+                <a href="./bicicletas.html"><p>Bicicletas</p></a>
+                <a href="./seguros.html"><p>Seguros</p></a>
+                <a href="./contato.html"><p>Contato</p></a>
                 <p>Termos e Condições</p>
             </div>
         </div>
